--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Created by Tivotal-->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,9 +20,39 @@
 
     <!--css file-->
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!--Popup it is-->
+    <div class="popup">
+      <button id="close">&times;</button>
+      <div class="text">
+             Login
+          </div>
+          <form action="#">
+             <div class="data">
+                <label>Email</label>
+                <input type="text" required>
+             </div>
+             <div class="data">
+                <label>Password</label>
+                <input type="password" required>
+             </div>
+             <div class="forgot-pass">
+                <a href="#">Forgot Password?</a>
+             </div>
+             <div class="btn">
+                <div class="inner"></div>
+                <button type="submit">login</button>
+             </div>
+             <div class="signup-link">
+                Not a member? <a href="#">Signup now</a>
+             </div>
+          </form>
+      </div>
+
     <!-- header section starts  -->
+
     <header class="header">
       <a href="#" class="logo"><span>k</span>anasu</a>
 
