Added a login button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event Organisers | Tivotal</title>
+    <title>Event Organisers | Blesseve</title>
 
     <!--swiper css-->
     <link
@@ -54,7 +54,7 @@
     <!-- header section starts  -->
 
     <header class="header">
-      <a href="#" class="logo"><span>k</span>anasu</a>
+      <a href="#" class="logo"><span>B</span>lesseve</a>
 
       <nav class="navbar">
         <a href="#home">home</a>
@@ -64,6 +64,7 @@
         <a href="#price">price</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
+        <button id="Log-in">Log in</button>
       </nav>
 
       <div id="menu-bars" class="fas fa-bars"></div>
@@ -74,7 +75,7 @@
       <div class="content">
         <h3>
           where your ideas take off
-          <span> kanasu events </span>
+          <span> Blesseve events </span>
         </h3>
         <a href="#" class="btn">get quote</a>
       </div>
@@ -112,8 +113,8 @@
           <i class="fas fa-envelope"></i>
           <h3>invitation card design</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            Our invitation cards captivate with sophisticated design, 
+            setting the tone for your special event. Order yours today.
           </p>
         </div>
 
@@ -121,8 +122,8 @@
           <i class="fas fa-photo-video"></i>
           <h3>photos and videos</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            High-quality visuals for every occasion. Professional photography
+            and videography services.Capturing memories that last a lifetime.
           </p>
         </div>
 
@@ -130,8 +131,9 @@
           <i class="fas fa-music"></i>
           <h3>entertainment</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            "Laughter is timeless, imagination has no age, 
+             dreams are forever." - Walt Disney
+
           </p>
         </div>
 
@@ -139,8 +141,8 @@
           <i class="fas fa-car"></i>
           <h3>enent vehicles</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            From classic cars to luxurious limousines,
+            we ensure a grand entrance for every guest.
           </p>
         </div>
 
@@ -148,8 +150,10 @@
           <i class="fas fa-map-marker-alt"></i>
           <h3>venue selection</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            Discover the perfect venue! From intimate 
+            gatherings to grand celebrations, our event
+            management website offers curated selections
+            for every occasion.
           </p>
         </div>
 
@@ -157,8 +161,9 @@
           <i class="fas fa-birthday-cake"></i>
           <h3>food catering</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro,
-            suscipit.
+            Savor the flavor! Explore our exquisite catering options,
+            designed to tantalize taste buds and elevate your event 
+            experience to new heights
           </p>
         </div>
       </div>
@@ -176,15 +181,18 @@
         <div class="content">
           <h3>your occasion deserves our careful planning</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            labore fugiat ut esse perferendis perspiciatis provident dolores
-            fuga in facilis culpa possimus, quia praesentium itaque, sapiente
-            quasi harum rem asperiores.
+            Blesseve is a full service event management firm based 
+            in Calgary, Alberta that was created by pairing together
+            our passion for business and events.we're passionate about
+            transforming your vision into reality. With years of industry
+            expertise, our dedicated team specializes in crafting 
+            unforgettable experiences tailored to your unique needs.
           </p>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-            vero expedita incidunt provident quibusdam aut odit, numquam
-            nesciunt similique nisi.
+            we're committed to exceeding expectations, delivering 
+            exceptional service and unmatched creativity. Entrust 
+            us with your event, and let us turn your dreams into 
+            memories that last a lifetime.
           </p>
           <a href="#" class="btn">reach us</a>
         </div>
@@ -295,7 +303,7 @@
       <div class="box-container">
         <div class="box">
           <h3 class="title">basic</h3>
-          <h3 class="amount">$879.00</h3>
+          <h3 class="amount">50k</h3>
           <ul>
             <li><i class="fas fa-check"></i>full services</li>
             <li><i class="fas fa-check"></i> decorations</li>
@@ -308,7 +316,7 @@
 
         <div class="box">
           <h3 class="title">prime</h3>
-          <h3 class="amount">$799.00</h3>
+          <h3 class="amount">65k</h3>
           <ul>
             <li><i class="fas fa-check"></i>full services</li>
             <li><i class="fas fa-check"></i> decorations</li>
@@ -321,7 +329,7 @@
 
         <div class="box">
           <h3 class="title">luxury</h3>
-          <h3 class="amount">$379.00</h3>
+          <h3 class="amount">85k</h3>
           <ul>
             <li><i class="fas fa-check"></i>full services</li>
             <li><i class="fas fa-check"></i> decorations</li>
@@ -334,7 +342,7 @@
 
         <div class="box">
           <h3 class="title">ultra</h3>
-          <h3 class="amount">$920.00</h3>
+          <h3 class="amount">95k</h3>
           <ul>
             <li><i class="fas fa-check"></i>full services</li>
             <li><i class="fas fa-check"></i> decorations</li>
@@ -363,10 +371,11 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              dolor dicta cum. Eos beatae eligendi, magni numquam nemo sed ut
-              corrupti, ipsam iure nisi unde et assumenda perspiciatis
-              voluptatibus nihil.
+              "I hired blesseve to host the grand opening
+               of our new salon in kolkata. From the 
+               moment I met blesseve team, I was sure my
+               event was going to be a successful one. In fact,
+               it was beyond what I could have expected or imagined." 
             </p>
           </div>
 
@@ -380,10 +389,11 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              dolor dicta cum. Eos beatae eligendi, magni numquam nemo sed ut
-              corrupti, ipsam iure nisi unde et assumenda perspiciatis
-              voluptatibus nihil.
+              "Blessseve was terrific! I am so thankful 
+               blesseve and the whole team were there
+               to help plan my wedding. They were with me from planning
+               until the very end and their eye for detail and tremendous
+               resources made all the difference."
             </p>
           </div>
 
@@ -397,10 +407,10 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              dolor dicta cum. Eos beatae eligendi, magni numquam nemo sed ut
-              corrupti, ipsam iure nisi unde et assumenda perspiciatis
-              voluptatibus nihil.
+              "I highly recommend Blesseve not only for
+               their ability to totally produce your vision,
+               but also for their friendliness and professionalism.
+               It is so fun working with them!"
             </p>
           </div>
 
@@ -414,10 +424,14 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              dolor dicta cum. Eos beatae eligendi, magni numquam nemo sed ut
-              corrupti, ipsam iure nisi unde et assumenda perspiciatis
-              voluptatibus nihil.
+              "From the initial planning stages to the flawless 
+               execution on the day of the event, they demonstrated 
+               expertise and commitment at every step. Their seamless
+               coordination and proactive approach alleviated any 
+               stress, allowing me to fully enjoy and cherish the 
+               occasion. I wholeheartedly recommend their services 
+               to anyone seeking a top-notch event management team. 
+               Thank you for making my event unforgettable!"
             </p>
           </div>
         </div>
@@ -475,10 +489,10 @@
           <h3>contact info</h3>
           <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
           <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-          <a href="#"> <i class="fas fa-envelope"></i> kanasu@gmail.com </a>
-          <a href="#"> <i class="fas fa-envelope"></i> kanasuind@gmail.com </a>
+          <a href="#"> <i class="fas fa-envelope"></i>blesseveofficial@gmail.com </a>
+          <a href="#"> <i class="fas fa-envelope"></i>zsdeveloperofficial@gmail.com </a>
           <a href="#">
-            <i class="fas fa-map-marker-alt"></i> bangalore, india - 560054
+            <i class="fas fa-map-marker-alt"></i> kolkata, india - 700056
           </a>
         </div>
 
@@ -492,7 +506,7 @@
       </div>
 
       <div class="credit">
-        created by <span>Tivotal</span> | all rights reserved
+        created by <span>ZSDeveloper</span> | all rights reserved
       </div>
     </section>
 
